src/objects/Car__c.object
<CustomObject>
    <description>Actuall Car</description>
    <fields>
        <fullName>Is_Valid_For_Rent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>defines if car is available for rent</description>
        <label>Is Valid For Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IMAGE
( 
 IF( Is_Valid_For_Rent__c ,      
CASE
(Type__c, 

&quot;sedan&quot;,
 &quot;https://img.freepik.com/premium-vector/modern-sport-sedan-silhouette_609982-322.jpg?w=1380&quot;,

&quot;minivan&quot;, &quot;https://media.istockphoto.com/id/1440630783/ru/%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F/%D0%B7%D0%BD%D0%B0%D1%87%D0%BE%D0%BA-%D0%BC%D0%B8%D0%BD%D0%B8%D0%B2%D1%8D%D0%BD%D0%B0-%D0%BD%D0%B5%D0%B1%D0%BE%D0%BB%D1%8C%D1%88%D0%BE%D0%B9-%D0%BF%D0%B0%D1%81%D1%81%D0%B0%D0%B6%D0%B8%D1%80%D1%81%D0%BA%D0%B8%D0%B9-%D1%84%D1%83%D1%80%D0%B3%D0%BE%D0%BD-%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%81%D0%B8%D0%BB%D1%83%D1%8D%D1%82-%D0%B2%D0%B8%D0%B4-%D1%81%D0%B1%D0%BE%D0%BA%D1%83-%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F-%D0%BF%D1%80%D0%BE%D1%81%D1%82%D0%B0%D1%8F.jpg?s=170667a&amp;w=0&amp;k=20&amp;c=DjU71UGJS3gziqnHLNwECD4n5tZkDcl_VKZ5hDNGafo=&quot;,

&quot;hatchback&quot;,
 &quot;https://media.istockphoto.com/id/534784879/ru/%D0%B2%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F/%D1%81%D0%B8%D0%BB%D1%83%D1%8D%D1%82-%D1%85%D1%8D%D1%82%D1%87%D0%B1%D0%B5%D0%BA-%D0%B0%D0%B2%D1%82%D0%BE%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C.jpg?s=2048x2048&amp;w=is&amp;k=20&amp;c=Ssyqk_TBpK7TmUbk7b-9mMW-0mdRp2ozuso66DvOrPQ=&quot;,  
&quot;https://www.shutterstock.com/shutterstock/photos/1383924356/display_1500/stock-vector-no-vehicles-allowed-sign-in-red-and-black-crossed-out-silhouette-of-a-car-1383924356.jpg&quot;)
, &quot;https://www.shutterstock.com/shutterstock/photos/1383924356/display_1500/stock-vector-no-vehicles-allowed-sign-in-red-and-black-crossed-out-silhouette-of-a-car-1383924356.jpg&quot;
), &quot;text&quot;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Minivan</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>